# Elias_Website

./: Dockerfile  README.md  build.sh  db.sqlite3  fly.toml  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  render.yaml  requirements.txt  tailwind.config.js
pages/: views.py
pages/templates/pages/: home.html
projects/: models.py
projects/migrations/: 0001_initial.py  0002_project_image_project_link.py  0003_remove_project_image.py  0004_project_github_link.py
projects/templates/projects/: project_index.html
static/css/: output.css
staticfiles/admin/css/: output.css
templates/: base.html
website/: settings.py  urls.py
